# NOCTUA

./: .gitignore  README.md
agent/: CMakeLists.txt  Makefile
agent/src/: chrome.cpp  config.h  dumper.h  exfil.cpp  main.cpp  obfuscate.h  rdp.cpp  telegram.cpp  wifi.cpp
dashboard/: app.py
dashboard/data/: noctua.db
dashboard/static/css/: style.css
dashboard/static/js/: app.js
dashboard/templates/: index.html
screenshots/: architecture.html  dashboard.html
